spec-determinism/vstd-survey/experiments/repro-2026-07-21-public-free/artifacts/raw_ptr__ptr_mut_read__L602/verus_stderr.txt
error[E0599]: no method named `addr` found for struct `vstd::raw_ptr::PointsTo<T>` in the current scope
  --> vstd-survey/experiments/repro-2026-07-21-public-free/artifacts/raw_ptr__ptr_mut_read__L602/harness.rs:30:51
   |
30 |     if g__pre_perm__addr___eq { assume((pre_perm).addr() as int == k__pre_perm__addr___eq); }
   |                                                   ^^^^ method not found in `vstd::raw_ptr::PointsTo<T>`

error[E0599]: no method named `addr` found for struct `vstd::raw_ptr::PointsTo<T>` in the current scope
  --> vstd-survey/experiments/repro-2026-07-21-public-free/artifacts/raw_ptr__ptr_mut_read__L602/harness.rs:31:52
   |
31 |     if g__pre_perm__addr___rng { assume((pre_perm).addr() as int >= k__pre_perm__addr___rng_lo && (pre_perm).addr() as int <= k__pre...
   |                                                    ^^^^ method not found in `vstd::raw_ptr::PointsTo<T>`

error[E0599]: no method named `addr` found for struct `vstd::raw_ptr::PointsTo<T>` in the current scope
  --> vstd-survey/experiments/repro-2026-07-21-public-free/artifacts/raw_ptr__ptr_mut_read__L602/harness.rs:31:110
   |
31 | ...pre_perm__addr___rng_lo && (pre_perm).addr() as int <= k__pre_perm__addr___rng_hi); }
   |                                          ^^^^ method not found in `vstd::raw_ptr::PointsTo<T>`

error[E0599]: no method named `addr` found for struct `vstd::raw_ptr::PointsTo<T>` in the current scope
  --> vstd-survey/experiments/repro-2026-07-21-public-free/artifacts/raw_ptr__ptr_mut_read__L602/harness.rs:34:55
   |
34 |     if g__post1_perm__addr___eq { assume((post1_perm).addr() as int == k__post1_perm__addr___eq); }
   |                                                       ^^^^ method not found in `vstd::raw_ptr::PointsTo<T>`

error[E0599]: no method named `addr` found for struct `vstd::raw_ptr::PointsTo<T>` in the current scope
  --> vstd-survey/experiments/repro-2026-07-21-public-free/artifacts/raw_ptr__ptr_mut_read__L602/harness.rs:35:56
   |
35 |     if g__post1_perm__addr___rng { assume((post1_perm).addr() as int >= k__post1_perm__addr___rng_lo && (post1_perm).addr() as int <...
   |                                                        ^^^^ method not found in `vstd::raw_ptr::PointsTo<T>`

error[E0599]: no method named `addr` found for struct `vstd::raw_ptr::PointsTo<T>` in the current scope
  --> vstd-survey/experiments/repro-2026-07-21-public-free/artifacts/raw_ptr__ptr_mut_read__L602/harness.rs:35:118
   |
35 | ...1_perm__addr___rng_lo && (post1_perm).addr() as int <= k__post1_perm__addr___rng_hi); }
   |                                          ^^^^ method not found in `vstd::raw_ptr::PointsTo<T>`

error[E0599]: no method named `addr` found for struct `vstd::raw_ptr::PointsTo<T>` in the current scope
  --> vstd-survey/experiments/repro-2026-07-21-public-free/artifacts/raw_ptr__ptr_mut_read__L602/harness.rs:38:55
   |
38 |     if g__post2_perm__addr___eq { assume((post2_perm).addr() as int == k__post2_perm__addr___eq); }
   |                                                       ^^^^ method not found in `vstd::raw_ptr::PointsTo<T>`

error[E0599]: no method named `addr` found for struct `vstd::raw_ptr::PointsTo<T>` in the current scope
  --> vstd-survey/experiments/repro-2026-07-21-public-free/artifacts/raw_ptr__ptr_mut_read__L602/harness.rs:39:56
   |
39 |     if g__post2_perm__addr___rng { assume((post2_perm).addr() as int >= k__post2_perm__addr___rng_lo && (post2_perm).addr() as int <...
   |                                                        ^^^^ method not found in `vstd::raw_ptr::PointsTo<T>`

error[E0599]: no method named `addr` found for struct `vstd::raw_ptr::PointsTo<T>` in the current scope
  --> vstd-survey/experiments/repro-2026-07-21-public-free/artifacts/raw_ptr__ptr_mut_read__L602/harness.rs:39:118
   |
39 | ...2_perm__addr___rng_lo && (post2_perm).addr() as int <= k__post2_perm__addr___rng_hi); }
   |                                          ^^^^ method not found in `vstd::raw_ptr::PointsTo<T>`

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0599`.
